samples/_failures_safe/1761596897_28ce1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2722c00d.c: In function ‘main’:
./samples/SAFE/__tmp_2722c00d.c:146:10: error: ‘init_comp’ undeclared (first use in this function)
  146 |     if (!init_comp
      |          ^~~~~~~~~
./samples/SAFE/__tmp_2722c00d.c:146:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2722c00d.c:146:19: error: expected ‘)’ at end of input
  146 |     if (!init_comp
      |        ~          ^
      |                   )
./samples/SAFE/__tmp_2722c00d.c:146:5: error: expected declaration or statement at end of input
  146 |     if (!init_comp
      |     ^~
